# simulo

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Cargo.toml  Doxyfile  README.md  build.zig  build.zig.zon  gen_wayland_sources.sh  output.txt  recompile_shaders.ps1  recompile_shaders.sh  setup_macos.sh  simulo.py
.circleci/: config.yml
.github/workflows/: build-linux.yml  build.yml  claude.yml
editor/: Cargo.toml  build.rs
editor/src/: main.rs  simulo_cc.rs
engine/: engine.zig  midi.zig  profiler.zig  scene.zig
engine/math/: matrix.zig
example/: CMakeLists.txt  Cargo.toml  Package.swift  build.sh  main.cc  main.wasm  simulo__post.h  simulo__pre.h
example/Sources/example/: main.swift
example/simulo-declare-type/: Cargo.toml
example/src/: game.rs  lib.rs  simulo.rs
godot/: extension.zig  gdextension_interface.h  godot.zig  register_types.cc  register_types.os
legacy-editor/: app.cc  app.h  main.zig  stl.h
legacy-editor/geometry/: model.h  shape.cc  shape.h
legacy-editor/math/: angle.h  angle_test.cc  attributes.h
legacy-editor/ttf/: reader.h
legacy-editor/ui/: font.cc  font.h
legacy-editor/util/: libdeflate.h  rational.cc  rational.h  reader.h
perception_sdk/: .gitignore  CMakeLists.txt  README.md  perception.cc  perception.h  pose_model.cc  pose_model.h  test.cc
perception_sdk/godot/: CMakeLists.txt  SConstruct  gdperception.gdextension  register_types.cc
perception_sdk/onnx_exporter/: __main__.py  pyproject.toml  requirements.txt
runtime/: app.cc  behaviors.zig  events.zig  eyeguard.zig  ffi.h  fs_storage.zig  ini.zig  log.zig  main.zig  mask.zig  runtime.zig  wasm_message.zig
runtime/audio/: audio.zig
runtime/camera/: linux_camera.zig  macos_camera.h  macos_camera.mm  macos_camera.zig  mjpg.cc  mjpg.h
runtime/dev/: config.zig
runtime/device/: camera.zig  config.zig  device.zig  display.zig
runtime/gpu/: gpu.h  gpu.zig
runtime/gpu/metal/: buffer.h  (+7 more)
runtime/image/: image.zig  opencv_image.cc  opencv_image.h
runtime/inference/: calibrate.cc  calibrate.zig  inference.zig  pose.zig  rtmo-m.onnx  tensorrt_rtx.cc  tensorrt_rtx.zig  tensorrt_rtx_ffi.h  tracking.zig
runtime/io/: event_loop.zig  event_loop_linux.zig  event_loop_macos.zig  https.zig  test.txt  test_tcp.py  trustanchor.h  uring_wrappers.c
runtime/math/: matrix.h  vector.h
runtime/opencv/: opencv.cc  opencv.h  opencv.zig
runtime/remote/: download.zig  noop_remote.zig  packet.zig  remote.zig
runtime/render/: mt_renderer.h  mt_renderer.mm  renderer.h  renderer.zig  ui.h  vk_renderer.cc  vk_renderer.h  vk_renderer.zig
runtime/serial/: serial.zig  serial_posix.zig
runtime/shader/: model.frag  model.vert  text.frag  text.metal  text.vert
runtime/tracking/: BYTETracker.cpp  BYTETracker.h  README.md  STrack.cpp  STrack.h  bindings.h  dataType.h  kalmanFilter.cpp  kalmanFilter.h  lapjv.cpp  lapjv.h  tracking.zig  utils.cpp
runtime/ttf/: example.zig  glyph.zig  rasterize.zig  reader.zig  ttf.zig
runtime/util/: memory.h  os_detect.h  slab.h
runtime/wasm/: allocate.zig  allocate_macos.zig  asm.zig  asm_aarch64.zig  deserializer.zig  error.zig  jit.zig  wasm.zig
runtime/window/: window.h  window.zig
src/: CMakeLists.txt  app.cc  app.h  engine.zig  ffi.h  game.cc  game.h  main.cc  main.zig  mesh.h  perception_test.cc  renderer.cc  renderer.h  scene.cc  scene.h  sound.cc  sound.h  stl.cc  stl.h
src/camera/: camera.zig  macos_camera.mm  macos_camera.zig
src/entity/: player.cc  player.h
src/geometry/: circle.cc  circle.h  geometry.h  model.cc  model.h  shape.cc  shape.h
src/godot/: CMakeLists.txt  extension.zig  godot.zig  register_types.cc
src/gpu/: buffer.cc  buffer.h  command_pool.cc  command_pool.h  descriptor_pool.cc  descriptor_pool.h  device.cc  device.h  gpu.cc  gpu.h  gpu.zig  image.cc  image.h  instance.cc  instance.h  physical_device.cc  physical_device.h  pipeline.cc  pipeline.h  shader.cc  shader.h  status.h  swapchain.cc  swapchain.h
src/gpu/metal/: buffer.h  buffer.mm  command_queue.h  command_queue.mm  gpu.h  gpu.mm  image.h  image.mm  render_pipeline.h  render_pipeline.mm
src/gpu/vk/: gpu.cc  gpu.h
src/gpu/vulkan/: buffer.cc  buffer.h  command_pool.cc  command_pool.h  descriptor_pool.cc  descriptor_pool.h  device.cc  device.h  image.cc  image.h  instance.cc  instance.h  physical_device.cc  physical_device.h  pipeline.cc  pipeline.h  shader.cc  shader.h  status.h  swapchain.cc  swapchain.h
src/image/: png.cc  png.h
src/inference/: calibrate.cc  calibrate.zig  inference.zig  onnxruntime.zig  pose.zig
src/math/: angle.h  angle_test.cc  attributes.h  mat3.h  mat4.h  matrix.h  matrix.zig  matrix_test.cc  vec2.h  vec3.h  vec4.h  vector.h  vector_test.cc
src/perception/: perception.cc  perception.h  perception.zig  pose_model.cc  pose_model.h  yolo11n-pose.onnx
src/python/: tokenizer.zig
src/remote/: download.zig  remote.zig
src/render/: model.h  mt_renderer.h  mt_renderer.mm  render_object.h  renderer.h  renderer.zig  ui.h  vk_renderer.cc  vk_renderer.h
src/res/: Info.plist
src/runtime/: behaviors.zig  events.zig  main.zig  runtime.zig
src/scripting/: scripting.zig
src/shader/: model.vert  shader.frag  shader.vert  text.metal  text.vert
src/ttf/: reader.h  ttf.cc  ttf.h
src/ui/: font.cc  font.h  text.h  ui.cc  ui.h  widget.h
src/util/: alignment.h  array.h  assert.h  bitfield.h  bytebuf.h  fixed_arraylist.zig  libdeflate.h  memory.h  platform.zig  rand.h  rational.cc  rational.h  reader.h  reflect.zig  slab.h  slab.zig  spsc_ring.zig  util.zig
src/wasm/: wasm.zig
src/window/: keys.h  window.h  window.zig
src/window/linux/: keys.h  window.h  window_init.h  wl_deleter.cc  wl_deleter.h  wl_window.cc  wl_window.h  x11_window.cc  x11_window.h
src/window/macos/: window.h  window.mm
src/window/win32/: keys.h  window.cc  window.h
src/window/x11/: keys.h  window.cc  window.h
util/: checked_slab.zig  crash.zig  error_util.zig  fixed_arraylist.zig  fixed_slab.zig  id_definitions.zig  int_set.zig  packed_set.zig  reflect.zig  slab.zig  spsc_ring.zig  tests.zig  util.zig
(+48 files in other folders)
